--- a/bambooplus.html
+++ b/bambooplus.html
@@ -332,11 +332,11 @@
 				<div class="col-md-6 col-lg-5 p-b-30">
 					<div class="p-r-50 p-t-5 p-lr-0-lg">
 						<h4 class="mtext-105 cl2 js-name-detail p-b-14">
-							COWAY BAMBOO PLUS
+							<span style="color:blue;font-weight:bold">COWAY BAMBOO PLUS</span>
 						</h4>
 
 						<span class="mtext-106 cl2">
-							<s>RM95</s> RM85 Promosi Ogos 2022
+							<s>RM95</s> RM85 Sebulan <span style="color:red;font-weight:bold">Promosi Ogos 2022</span>
 						</span>
 
 						<p class="stext-102 cl3 p-t-23">
@@ -712,7 +712,7 @@
 									</a>
 
 									<span class="stext-105 cl3">
-										<s>RM109.00</s> RM65.00 sebulan
+										<s>RM109.00</s> RM65.00 sebulan  <span style="color:red;font-weight:bold">Promosi Ogos 2022</span>
 									</span>
 								</div>
 
@@ -744,7 +744,7 @@
 									</a>
 
 									<span class="stext-105 cl3">
-										<s>RM115.00</s> RM77.00 sebulan
+										<s>RM115.00</s> RM77.00 sebulan  <span style="color:red;font-weight:bold">Promosi Ogos 2022</span>
 									</span>
 								</div>
 
