--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<nav class="limiter-menu-desktop container">
 					
 					<!-- Logo desktop -->		
-					<a href="#" class="logo">
+					<a href="index.html" class="logo">
 						<img src="images/icons/logo-01.png" alt="IMG-LOGO">
 					</a>
 
@@ -618,8 +618,9 @@
 								</a>
 
 								<span class="stext-105 cl3">
-									<s>RM109.00</s> RM65.00 sebulan
-								</span>
+									<s>RM109.00</s> RM65.00 sebulan <span style="color:red;font-weight:bold">Promosi Ogos 2022</span>
+								</span>	
+								
 							</div>
 
 							<div class="block2-txt-child2 flex-r p-t-3">
@@ -650,7 +651,7 @@
 								</a>
 
 								<span class="stext-105 cl3">
-									<s>RM115.00</s> RM77.00 sebulan
+									<s>RM115.00</s> RM77.00 sebulan <span style="color:red;font-weight:bold">Promosi Ogos 2022</span>
 								</span>
 							</div>
 
@@ -938,7 +939,7 @@
 								</a>
 
 								<span class="stext-105 cl3">
-									<s>RM95.00</s> RM85.00 sebulan
+									<s>RM95.00</s> RM85.00 sebulan <span style="color:red;font-weight:bold">Promosi Ogos 2022</span>
 								</span>
 							</div>
 
@@ -970,7 +971,7 @@
 								</a>
 
 								<span class="stext-105 cl3">
-									<s>RM90.00</s> RM70.00 sebulan
+									<s>RM90.00</s> RM70.00 sebulan <span style="color:red;font-weight:bold">Promosi Ogos 2022</span>
 								</span>
 							</div>
 
@@ -1002,7 +1003,7 @@
 								</a>
 
 								<span class="stext-105 cl3">
-									<s>RM109.00</s> RM90.00  sebulan
+									<s>RM109.00</s> RM90.00  sebulan <span style="color:red;font-weight:bold">Promosi Ogos 2022</span>
 								</span>
 							</div>
 
@@ -1098,7 +1099,7 @@
 								</a>
 
 								<span class="stext-105 cl3">
-									Daripada RM99.00 sebulan
+									Daripada RM99.00 sebulan <span style="color:red;font-weight:bold">Promosi Ogos 2022</span>
 								</span>
 							</div>
 
