--- a/kecil.html
+++ b/kecil.html
@@ -709,7 +709,7 @@
 									</a>
 
 									<span class="stext-105 cl3">
-										<s>RM109.00</s> RM65.00 sebulan
+										<s>RM109.00</s> RM65.00 sebulan <span style="color:red;font-weight:bold">Promosi Ogos 2022</span>
 									</span>
 								</div>
 
@@ -997,7 +997,7 @@
 									</a>
 
 									<span class="stext-105 cl3">
-										<s>RM95.00</s> RM85.00 sebulan
+										<s>RM95.00</s> RM85.00 sebulan <span style="color:red;font-weight:bold">Promosi Ogos 2022</span>
 									</span>
 								</div>
 
