--- a/lombok3.html
+++ b/lombok3.html
@@ -751,7 +751,7 @@
 									</a>
 
 									<span class="stext-105 cl3">
-										<s>RM90.00</s> RM70.00 sebulan
+										<s>RM90.00</s> RM70.00 sebulan  <span style="color:red;font-weight:bold">Promosi Ogos 2022</span>
 									</span>
 								</div>
 
