--- a/semuaproduk.html
+++ b/semuaproduk.html
@@ -497,7 +497,7 @@
 								</a>
 
 								<span class="stext-105 cl3">
-									<s>RM109.00</s> RM65.00 sebulan
+									<s>RM109.00</s> RM65.00 sebulan  <span style="color:red;font-weight:bold">Promosi Ogos 2022</span>
 								</span>
 							</div>
 
@@ -529,7 +529,7 @@
 								</a>
 
 								<span class="stext-105 cl3">
-									<s>RM115.00</s> RM77.00 sebulan
+									<s>RM115.00</s> RM77.00 sebulan  <span style="color:red;font-weight:bold">Promosi Ogos 2022</span>
 								</span>
 							</div>
 
@@ -817,7 +817,7 @@
 								</a>
 
 								<span class="stext-105 cl3">
-									<s>RM95.00</s> RM85.00 sebulan
+									<s>RM95.00</s> RM85.00 sebulan  <span style="color:red;font-weight:bold">Promosi Ogos 2022</span>
 								</span>
 							</div>
 
@@ -849,7 +849,7 @@
 								</a>
 
 								<span class="stext-105 cl3">
-									<s>RM90.00</s> RM70.00 sebulan
+									<s>RM90.00</s> RM70.00 sebulan  <span style="color:red;font-weight:bold">Promosi Ogos 2022</span>
 								</span>
 							</div>
 
@@ -881,7 +881,7 @@
 								</a>
 
 								<span class="stext-105 cl3">
-									<s>RM109.00</s> RM90.00 sebulan
+									<s>RM109.00</s> RM90.00 sebulan  <span style="color:red;font-weight:bold">Promosi Ogos 2022</span>
 								</span>
 							</div>
 
@@ -977,7 +977,7 @@
 								</a>
 
 								<span class="stext-105 cl3">
-									Daripada RM99.00 sebulan
+									Daripada RM99.00 sebulan  <span style="color:red;font-weight:bold">Promosi Ogos 2022</span>
 								</span>
 							</div>
 
