--- a/cinnamon.html
+++ b/cinnamon.html
@@ -702,7 +702,7 @@
 									</a>
 
 									<span class="stext-105 cl3">
-										<s>RM109.00</s> RM65.00 sebulan
+										<s>RM109.00</s> RM65.00 sebulan  <span style="color:red;font-weight:bold">Promosi Ogos 2022</span>
 									</span>
 								</div>
 
@@ -734,7 +734,7 @@
 									</a>
 
 									<span class="stext-105 cl3">
-										<s>RM115.00</s> RM77.00 sebulan
+										<s>RM115.00</s> RM77.00 sebulan  <span style="color:red;font-weight:bold">Promosi Ogos 2022</span>
 									</span>
 								</div>
 
@@ -826,7 +826,7 @@
 							<div class="block2-txt flex-w flex-t p-t-14">
 								<div class="block2-txt-child1 flex-col-l ">
 									<a href="glaze.html" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
-										Penapis Air GLAZE 
+										<span style="color:blue;font-weight:bold">Penapis Air GLAZE</span>
 									</a>
 
 									<span class="stext-105 cl3">
@@ -990,7 +990,7 @@
 									</a>
 
 									<span class="stext-105 cl3">
-										<s>RM95.00</s> RM85.00 sebulan
+										<s>RM95.00</s> RM85.00 sebulan  <span style="color:red;font-weight:bold">Promosi Ogos 2022</span>
 									</span>
 								</div>
 
