--- a/core.html
+++ b/core.html
@@ -322,7 +322,7 @@
 				<div class="col-md-6 col-lg-5 p-b-30">
 					<div class="p-r-50 p-t-5 p-lr-0-lg">
 						<h4 class="mtext-105 cl2 js-name-detail p-b-14">
-							COWAY CORE
+							<span style="color:blue;font-weight:bold">COWAY CORE</span>
 						</h4>
 
 						<span class="mtext-106 cl2">
@@ -711,7 +711,7 @@
 									</a>
 
 									<span class="stext-105 cl3">
-										<s>RM109.00</s> RM65.00 sebulan
+										<s>RM109.00</s> RM65.00 sebulan  <span style="color:red;font-weight:bold">Promosi Ogos 2022</span>
 									</span>
 								</div>
 
@@ -743,7 +743,7 @@
 									</a>
 
 									<span class="stext-105 cl3">
-										<s>RM115.00</s> RM77.00 sebulan
+										<s>RM115.00</s> RM77.00 sebulan  <span style="color:red;font-weight:bold">Promosi Ogos 2022</span>
 									</span>
 								</div>
 
@@ -999,7 +999,7 @@
 									</a>
 
 									<span class="stext-105 cl3">
-										<s>RM95.00</s> RM85.00 sebulan
+										<s>RM95.00</s> RM85.00 sebulan  <span style="color:red;font-weight:bold">Promosi Ogos 2022</span>
 									</span>
 								</div>
 
