--- a/neoplus.html
+++ b/neoplus.html
@@ -738,7 +738,7 @@
 									</a>
 
 									<span class="stext-105 cl3">
-										<s>RM115.00</s> RM77.00 sebulan
+										<s>RM115.00</s> RM77.00 sebulan <span style="color:red;font-weight:bold">Promosi Ogos 2022</span>
 									</span>
 								</div>
 
@@ -994,7 +994,7 @@
 									</a>
 
 									<span class="stext-105 cl3">
-										<s>RM95.00</s> RM85.00 sebulan
+										<s>RM95.00</s> RM85.00 sebulan <span style="color:red;font-weight:bold">Promosi Ogos 2022</span>
 									</span>
 								</div>
 
