--- a/storm.html
+++ b/storm.html
@@ -743,7 +743,7 @@
 									</a>
 
 									<span class="stext-105 cl3">
-										<s>RM109.00</s> RM90.00 sebulan
+										<s>RM109.00</s> RM90.00 sebulan <span style="color:red;font-weight:bold">Promosi Ogos 2022</span>
 									</span>
 								</div>
 
