--- a/tuba.html
+++ b/tuba.html
@@ -322,11 +322,11 @@
 				<div class="col-md-6 col-lg-5 p-b-30">
 					<div class="p-r-50 p-t-5 p-lr-0-lg">
 						<h4 class="mtext-105 cl2 js-name-detail p-b-14">
-							COWAY TUBA
+							<span style="color:blue;font-weight:bold">COWAY TUBA</span>
 						</h4>
 						
 							<span class="mtext-106 cl2">
-								RM142
+								RM142 sebulan
 							</span>
 						
 						<p class="stext-102 cl3 p-t-23">
@@ -740,7 +740,7 @@
 									</a>
 
 									<span class="stext-105 cl3">
-										<s>RM109.00</s> RM90.00 sebulan
+										<s>RM109.00</s> RM90.00 sebulan  <span style="color:red;font-weight:bold">Promosi Ogos 2022</span>
 									</span>
 								</div>
 
@@ -804,7 +804,7 @@
 									</a>
 
 									<span class="stext-105 cl3">
-										<s>RM90.00</s> RM70.00 sebulan
+										<s>RM90.00</s> RM70.00 sebulan  <span style="color:red;font-weight:bold">Promosi Ogos 2022</span>
 									</span>
 								</div>
 
