--- a/contact.html
+++ b/contact.html
@@ -87,8 +87,9 @@
 							<li>
 								<a >Penapis Udara</a>
 									<ul class="sub-menu">
+										<li><a href="noble.html">Penapis Udara <b>NOBLE</b></a></li>
 										<li><a href="storm.html">Penapis Udara <b>STORM</b></a></li>
-										<li><a href="lombok3.html">Penapis Udara <b>LOMBOK 3</b></a></li>
+										<li><a href="lombok3.html">Penapis Udara <b>LOMBOK 3</b></a></li>								
 										<li><a href="breeze.html">Penapis Udara <b>BREEZE</b></a></li>
 										<li><a href="tuba.html">Penapis Udara <b>TUBA</b></a></li>
 									</ul>
@@ -97,7 +98,7 @@
 							<li>
 								<a>Tilam</a>
 									<ul class="sub-menu">
-										<li><a href="tilam.html">Tilam <b>Prime Series</b></a></li>
+										<li><a href="tilam.html">Tilam <b>Prime II Series</b></a></li>
 									</ul>
 							</li>
 							
@@ -176,6 +177,7 @@
 				<li>
 					<a>Penapis Udara</a>
 					<ul class="sub-menu-m">
+						<li><a href="noble.html">Penapis Udara <b>NOBLE</b></a></li>
 						<li><a href="storm.html">Penapis Udara <b>STORM</b></a></li>
 						<li><a href="lombok3.html">Penapis Udara <b>LOMBOK 3</b></a></li>
 						<li><a href="breeze.html">Penapis Udara <b>BREEZE</b></a></li>
@@ -189,7 +191,7 @@
 				<li>
 					<a>Tilam</a>
 					<ul class="sub-menu-m">
-						<li><a href="tilam.html">Tilam <b>Prime Series</b></a></li>
+						<li><a href="tilam.html">Tilam <b>Prime II Series</b></a></li>
 					</ul>
 					<span class="arrow-main-menu-m">
 						<i class="fa fa-angle-right" aria-hidden="true"></i>
