--- a/promosi.html
+++ b/promosi.html
@@ -87,8 +87,9 @@
 							<li>
 								<a >Penapis Udara</a>
 									<ul class="sub-menu">
+										<li><a href="noble.html">Penapis Udara <b>NOBLE</b></a></li>
 										<li><a href="storm.html">Penapis Udara <b>STORM</b></a></li>
-										<li><a href="lombok3.html">Penapis Udara <b>LOMBOK 3</b></a></li>
+										<li><a href="lombok3.html">Penapis Udara <b>LOMBOK 3</b></a></li>								
 										<li><a href="breeze.html">Penapis Udara <b>BREEZE</b></a></li>
 										<li><a href="tuba.html">Penapis Udara <b>TUBA</b></a></li>
 									</ul>
@@ -97,7 +98,7 @@
 							<li>
 								<a>Tilam</a>
 									<ul class="sub-menu">
-										<li><a href="tilam.html">Tilam <b>Prime Series</b></a></li>
+										<li><a href="tilam.html">Tilam <b>Prime II Series</b></a></li>
 									</ul>
 							</li>
 							
@@ -176,6 +177,7 @@
 				<li>
 					<a>Penapis Udara</a>
 					<ul class="sub-menu-m">
+						<li><a href="noble.html">Penapis Udara <b>NOBLE</b></a></li>
 						<li><a href="storm.html">Penapis Udara <b>STORM</b></a></li>
 						<li><a href="lombok3.html">Penapis Udara <b>LOMBOK 3</b></a></li>
 						<li><a href="breeze.html">Penapis Udara <b>BREEZE</b></a></li>
@@ -189,7 +191,7 @@
 				<li>
 					<a>Tilam</a>
 					<ul class="sub-menu-m">
-						<li><a href="tilam.html">Tilam <b>Prime Series</b></a></li>
+						<li><a href="tilam.html">Tilam <b>Prime II Series</b></a></li>
 					</ul>
 					<span class="arrow-main-menu-m">
 						<i class="fa fa-angle-right" aria-hidden="true"></i>
@@ -315,7 +317,7 @@
 						</h3>
 
 						<p class="stext-113 cl6 p-b-26">
-							Khas buat pelanggan <b>individu</b> yang ingin dapatkan promosi penapis udara model terlaris <span style="color:blue;font-weight:bold">STORM</span> serendah <b>RM70 sebulan!</b>
+							Khas buat pelanggan <b>individu</b> yang ingin dapatkan promosi penapis udara model terlaris <span style="color:blue;font-weight:bold">STORM</span> serendah <b>RM58 sebulan!</b>
 						</p>
 						
 						<p class="stext-113 cl6 p-b-26">
