--- a/tuba.html
+++ b/tuba.html
@@ -100,8 +100,9 @@
 							<li>
 								<a >Penapis Udara</a>
 									<ul class="sub-menu">
+										<li><a href="noble.html">Penapis Udara <b>NOBLE</b></a></li>
 										<li><a href="storm.html">Penapis Udara <b>STORM</b></a></li>
-										<li><a href="lombok3.html">Penapis Udara <b>LOMBOK 3</b></a></li>
+										<li><a href="lombok3.html">Penapis Udara <b>LOMBOK 3</b></a></li>								
 										<li><a href="breeze.html">Penapis Udara <b>BREEZE</b></a></li>
 										<li><a href="tuba.html">Penapis Udara <b>TUBA</b></a></li>
 									</ul>
@@ -110,7 +111,7 @@
 							<li>
 								<a>Tilam</a>
 									<ul class="sub-menu">
-										<li><a href="tilam.html">Tilam <b>Prime Series</b></a></li>
+										<li><a href="tilam.html">Tilam <b>Prime II Series</b></a></li>
 									</ul>
 							</li>
 							
@@ -189,6 +190,7 @@
 				<li>
 					<a>Penapis Udara</a>
 					<ul class="sub-menu-m">
+						<li><a href="noble.html">Penapis Udara <b>NOBLE</b></a></li>
 						<li><a href="storm.html">Penapis Udara <b>STORM</b></a></li>
 						<li><a href="lombok3.html">Penapis Udara <b>LOMBOK 3</b></a></li>
 						<li><a href="breeze.html">Penapis Udara <b>BREEZE</b></a></li>
@@ -202,7 +204,7 @@
 				<li>
 					<a>Tilam</a>
 					<ul class="sub-menu-m">
-						<li><a href="tilam.html">Tilam <b>Prime Series</b></a></li>
+						<li><a href="tilam.html">Tilam <b>Prime II Series</b></a></li>
 					</ul>
 					<span class="arrow-main-menu-m">
 						<i class="fa fa-angle-right" aria-hidden="true"></i>
@@ -804,7 +806,7 @@
 									</a>
 
 									<span class="stext-105 cl3">
-										<s>RM90.00</s> RM70.00 sebulan  <span style="color:red;font-weight:bold">Promosi Ogos 2022</span>
+										<s>RM90.00</s> RM58.00 sebulan  <span style="color:red;font-weight:bold">Promosi Ogos 2022</span>
 									</span>
 								</div>
 
